# markdown-editor

./: CV.md  README.md  TODO.md  dogo.md  example.md  monica.md
src/: editor.html  export.js  index.html  language.js  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/css_themes/: default.css  dracula.css
src-tauri/src/: main.rs
src/js/: export.js  language.js  main.js  utils.js
src/styles/: main.css
